# VCONNEX_ITERN

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/app_ble_mesh/: CMakeLists.txt  app_ble_mesh.c  app_ble_mesh_cmd_handle.c
components/app_ble_mesh/include/: app_ble_mesh.h
components/app_ota/: CMakeLists.txt  app_ota.c  app_ota.h
components/app_time/: CMakeLists.txt  app_time.c
components/app_time/include/: app_time.h
components/blufi_app/: CMakeLists.txt  blufi_app.c  blufi_init.c  blufi_security.c
components/blufi_app/include/: blufi_app.h
components/iic_switch/: CMakeLists.txt  iic_sw.c
components/iic_switch/include/: iic_sw.h
components/led_buzzer_sw/: CMakeLists.txt  led_buzzer_sw.c
components/led_buzzer_sw/include/: led_buzzer_sw.h
components/mqtt_sw/: CMakeLists.txt  mqtt_app.c
components/mqtt_sw/include/: mqtt_app.h
main/: idf_component.yml  main.c
